fix video overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,6 +9,7 @@
 }
 
 #intro-section video {
+    overflow-x: hidden; 
     object-fit: cover;
     width: 100%;
     max-height: 100%;
@@ -567,6 +568,9 @@
     }
     .logos {
         padding: 10px;
+    }
+    #intro-section video {
+        display: none;
     }
 }
 
